--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
+    "nock": "^13.0.3",
     "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2"
